feat: :sparkles: dark theme enable

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer base{
+  body {
+      @apply dark:bg-gray-800 bg-white
+  }
+}
 
 body {
   margin: 0;
+}
+
+:root {
+  /* Your default theme */
+  --background: white;
+  --foreground: black;
+}
+
+[data-theme='dark'] {
+  --background: black;
+  --foreground: white;
 }
